--- a/views/thanks.ejs
+++ b/views/thanks.ejs
@@ -10,7 +10,7 @@
 <div class="container-fluid body">
 	<h1>Thank you!</h1>
 
-	<h2>Your new URL is: http://www.ittybittyurl.herokuapp.com/<%= token %></h2>
+	<h2>Your new URL is: ittybittyurl.herokuapp.com/<%= token %></h2>
 </div>
 
 <% include /footer %>
