--- a/views/header.ejs
+++ b/views/header.ejs
@@ -9,7 +9,7 @@
 <body>
   <header>
   <div class="header text-center">
-    <h1>Itty Bitty /url</h1>
+    <h1>itty bitty /url</h1>
     <h2>simplify your URL, simply your life.</h2>
   </div>
 
