--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,6 @@
 <% include /header %>
 
-	<div class="container-fluid body">
+	<div class="body">
 		<div class="row">
 			<div class="col-md-4 col-sm-4"></div>
 			<div class="col-md-4 col-sm-4">
