Added http to input field on index

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,7 @@
 				<% } %>
 				<h3>Enter URL Below:</h3><br>
 					<form action="/thanks" method="post">
-						<input type="text" name="url" placeholder="Enter URL">
+						<input type="text" name="url" value="http://">
 						<input type="submit" value="Generate">
 					</form>
 			</div>
