Edited index heading

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -10,7 +10,7 @@
   <header>
   <div class="header text-center">
     <h1>itty bitty /url</h1>
-    <h2>simplify your URL, simply your life.</h2>
+    <h2>simplify your URL, simplify your life.</h2>
   </div>
 
 </header>
